# alt_simu_class

./: README.md  pyproject.toml  requirements.txt
src/alt_simu_class/: __init__.py  __main__.py  classroom.py
tests/: test_classroom.py
