[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alt_simu_class"
version = "0.1.0"
description = "一个模拟班级成员的小程序"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ashida" },
]
keywords = ["simulation", "classroom", "student"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
]
dependencies = [
    "alt_generate_zh_name @ git+https://github.com/ashida2016/alt_generate_zh_name.git",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/alt_simu_class"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=alt_simu_class --cov-report=term-missing"
